--- a/hw-index.html
+++ b/hw-index.html
@@ -9,7 +9,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style/hw-style.css" />
+    <link rel="stylesheet" href="hw-style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap"
       rel="stylesheet"
@@ -189,5 +189,5 @@
       </div>
     </div>
   </body>
-  <script src="style/hw-index.js"></script>
+  <script src="hw.js"></script>
 </html>
