--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           </div>
         </div>
       </div>
-      <footer>Coded by Nikki Klein</footer>
+      <footer id="footer">Coded by Nikki Klein</footer>
     </div>
   </body>
   <script src="hw.js"></script>
