--- a/index.html
+++ b/index.html
@@ -188,7 +188,14 @@
         </div>
       </div>
     </div>
-    <footer id="footer">Coded by Nikki Klein</footer>
+    <footer id="footer">
+      <a
+        href="https://github.com/streetlightkids/WeatherAppProject"
+        id="gitReposLink"
+        >Coded</a
+      >
+      by Nikki Klein
+    </footer>
   </body>
   <script src="hw.js"></script>
 </html>
