added target to footer

--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
       <a
         href="https://github.com/streetlightkids/WeatherAppProject"
         id="gitReposLink"
-        >Coded</a
+        target="_blank"
+        >Open-source Code</a
       >
       by Nikki Klein
     </footer>
