--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="hw-style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@600&display=swap"
       rel="stylesheet"
@@ -198,5 +198,5 @@
       by Nikki Klein
     </footer>
   </body>
-  <script src="hw.js"></script>
+  <script src="app.js"></script>
 </html>
