adding alt to icons

--- a/index.html
+++ b/index.html
@@ -127,32 +127,32 @@
         <div class="col-2" id="days-container">
           Mon
           <br />
-          <i class="fas fa-wind" id="forecast-icons"></i>
+          <i class="fas fa-wind" id="forecast-icons" alt=""></i>
         </div>
         <div class="col-2" id="days-container">
           Tue
           <br />
-          <i class="fas fa-bolt" id="forecast-icons"></i>
+          <i class="fas fa-bolt" id="forecast-icons" alt=""></i>
         </div>
         <div class="col-2" id="days-container">
           Wed
           <br />
-          <i class="fas fa-sun" id="forecast-icons"></i>
+          <i class="fas fa-sun" id="forecast-icons" alt=""></i>
         </div>
         <div class="col-2" id="days-container">
           Thu
           <br />
-          <i class="fas fa-sun" id="forecast-icons"></i>
+          <i class="fas fa-sun" id="forecast-icons" alt=""></i>
         </div>
         <div class="col-2" id="days-container">
           Fri
           <br />
-          <i class="fas fa-cloud-sun" id="forecast-icons"></i>
+          <i class="fas fa-cloud-sun" id="forecast-icons" alt=""></i>
         </div>
         <div class="col-2" id="days-container">
           Sat
           <br />
-          <i class="fas fa-sun" id="forecast-icons"></i>
+          <i class="fas fa-sun" id="forecast-icons" alt=""></i>
         </div>
       </div>
 
@@ -160,9 +160,9 @@
         <div class="col-5" id="rise-container">
           <div class="row" id="rise-down-row">
             <div class="col-3" id="rise-down-icons-container">
-              <i class="fas fa-sun" id="rise-down-sun"></i>
+              <i class="fas fa-sun" id="rise-down-sun" alt="sun icon"></i>
               <br />
-              <i class="fas fa-arrow-up" id="arrow"></i>
+              <i class="fas fa-arrow-up" id="arrow" alt="arrow pointing up"></i>
             </div>
             <div class="col-8" id="rise-down-time-container">
               <h2 id="rise-down-time">
@@ -175,9 +175,13 @@
         <div class="col-5" id="down-container">
           <div class="row" id="rise-down-row">
             <div class="col-3" id="rise-down-icons-container">
-              <i class="fas fa-arrow-down" id="arrow"></i>
+              <i
+                class="fas fa-arrow-down"
+                id="arrow"
+                alt="arrow pointing down"
+              ></i>
               <br />
-              <i class="fas fa-sun" id="rise-down-sun"></i>
+              <i class="fas fa-sun" id="rise-down-sun" alt="sun icon"></i>
             </div>
             <div class="col-8" id="rise-down-time-container">
               <h2 id="rise-down-time">
