waether icon img imported
I got the API call to work and return the weather icon but now it won't search for a city when it's  typed in

--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
 
           <div class="row" id="day-icons-temp-row">
             <div class="col-4" id="day-icons-container">
-              <i class="fas fa-sun" id="current-day-icons"></i>
+              <img
+                src=""
+                alt=""
+                id="current-high-icon"
+                class="current-day-icons"
+              />
             </div>
 
             <div class="col-8" id="day-temp-container">
@@ -89,7 +94,7 @@
 
           <div class="row" id="day-icons-temp-row">
             <div class="col-4" id="day-icons-container">
-              <i class="fas fa-cloud-sun" id="current-day-icons"></i>
+              <img src="" alt="" id="current-icon" class="current-day-icons" />
             </div>
 
             <div class="col-8" id="day-temp-container">
@@ -111,7 +116,12 @@
 
           <div class="row" id="day-icons-temp-row">
             <div class="col-4" id="day-icons-container">
-              <i class="fas fa-moon" id="current-day-icons"></i>
+              <img
+                src=""
+                alt=""
+                id="current-low-icon"
+                class="current-day-icons"
+              />
             </div>
 
             <div class="col-8" id="day-temp-container">
@@ -127,32 +137,32 @@
         <div class="col-2" id="days-container">
           Mon
           <br />
-          <i class="fas fa-wind" id="forecast-icons" alt=""></i>
+          <img src="" alt="" id="forecast-icons" />
         </div>
         <div class="col-2" id="days-container">
           Tue
           <br />
-          <i class="fas fa-bolt" id="forecast-icons" alt=""></i>
+          <img src="" alt="" id="forecast-icons" />
         </div>
         <div class="col-2" id="days-container">
           Wed
           <br />
-          <i class="fas fa-sun" id="forecast-icons" alt=""></i>
+          <img src="" alt="" id="forecast-icons" />
         </div>
         <div class="col-2" id="days-container">
           Thu
           <br />
-          <i class="fas fa-sun" id="forecast-icons" alt=""></i>
+          <img src="" alt="" id="forecast-icons" />
         </div>
         <div class="col-2" id="days-container">
           Fri
           <br />
-          <i class="fas fa-cloud-sun" id="forecast-icons" alt=""></i>
+          <img src="" alt="" id="forecast-icons" />
         </div>
         <div class="col-2" id="days-container">
           Sat
           <br />
-          <i class="fas fa-sun" id="forecast-icons" alt=""></i>
+          <img src="" alt="" id="forecast-icons" />
         </div>
       </div>
 
