changed to "city" placeholder

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="row" id="current-city-row">
         <div class="col-10" id="current-city-container">
           <h1 id="current-city">
-            Jacksonville
+            City
           </h1>
         </div>
 
