adjusted fahr and cels hrefs

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
 
         <div class="col-2" id="f-c-a-container">
-          <a href="#" id="celsius-a">C</a> |
-          <a href="#" id="fahrenheit-a">F</a>
+          <a href="#" id="celsius-a" class="active">C</a> |
+          <a href="#" id="fahrenheit-a" class="active">F</a>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
 
             <div class="col-8" id="day-temp-container">
               <p id="high-temp">
-                24°C
+                °C
               </p>
             </div>
           </div>
@@ -99,7 +99,7 @@
 
             <div class="col-8" id="day-temp-container">
               <p id="current-temp">
-                18°C
+                °C
               </p>
             </div>
           </div>
@@ -126,7 +126,7 @@
 
             <div class="col-8" id="day-temp-container">
               <p id="low-temp">
-                12°C
+                °C
               </p>
             </div>
           </div>
