trying to get the forecast code to work

--- a/index.html
+++ b/index.html
@@ -133,38 +133,7 @@
         </div>
       </div>
 
-      <div class="row" id="days-container-row">
-        <div class="col-2" id="days-container">
-          Mon
-          <br />
-          <img src="" alt="" id="forecast-icons" />
-        </div>
-        <div class="col-2" id="days-container">
-          Tue
-          <br />
-          <img src="" alt="" id="forecast-icons" />
-        </div>
-        <div class="col-2" id="days-container">
-          Wed
-          <br />
-          <img src="" alt="" id="forecast-icons" />
-        </div>
-        <div class="col-2" id="days-container">
-          Thu
-          <br />
-          <img src="" alt="" id="forecast-icons" />
-        </div>
-        <div class="col-2" id="days-container">
-          Fri
-          <br />
-          <img src="" alt="" id="forecast-icons" />
-        </div>
-        <div class="col-2" id="days-container">
-          Sat
-          <br />
-          <img src="" alt="" id="forecast-icons" />
-        </div>
-      </div>
+      <div class="row" id="forecastRow"></div>
 
       <div class="row" id="rise-down-container-row">
         <div class="col-5" id="rise-container">
