Pause trying to figure out forecast
I put a pin in figuring out how to get the forecast. Revisit this later.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="row" id="forecastRow"></div>
 
       <div class="row" id="rise-down-container-row">
-        <div class="col-5" id="rise-container">
+        <!--<div class="col-5" id="rise-container">
           <div class="row" id="rise-down-row">
             <div class="col-3" id="rise-down-icons-container">
               <i class="fas fa-sun" id="rise-down-sun" alt="sun icon"></i>
@@ -168,7 +168,7 @@
               </h2>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
     <footer id="footer">
