cleaning up code
put time and date into a function and cleaned up the HTML and CSS so I could add the mandatory criteria for the project

--- a/index.html
+++ b/index.html
@@ -133,9 +133,12 @@
         </div>
       </div>
 
-      <div class="row" id="forecastRow"></div>
+      <div class="row" id="wind-speed-row">
+        <div class="col-12" id="wind-speed-container"></div>
+      </div>
 
-      <div class="row" id="rise-down-container-row">
+      <div class="row" id="humidity-row">
+        <div class="col-12" id="humidity-container"></div>
         <!--<div class="col-5" id="rise-container">
           <div class="row" id="rise-down-row">
             <div class="col-3" id="rise-down-icons-container">
