admitting defeat once again
I will figure you out someday forecast... *shakes fist*

--- a/index.html
+++ b/index.html
@@ -139,7 +139,12 @@
 
       <div class="row" id="humidity-row">
         <div class="col-12" id="humidity-container"></div>
-        <!--<div class="col-5" id="rise-container">
+      </div>
+
+      <!--<div class="row" id="forecast-row"></div>
+
+      <div class="row" id="rise-down-container-row">
+        <div class="col-5" id="rise-container">
           <div class="row" id="rise-down-row">
             <div class="col-3" id="rise-down-icons-container">
               <i class="fas fa-sun" id="rise-down-sun" alt="sun icon"></i>
@@ -171,8 +176,8 @@
               </h2>
             </div>
           </div>
-        </div>-->
-      </div>
+        </div>
+      </div>-->
     </div>
     <footer id="footer">
       <a
