--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
         <div class="col-12" id="humidity-container"></div>
       </div>
 
-      <!--<div class="row" id="forecast-row"></div>
+      <div class="row" id="forecast-row"></div>
 
-      <div class="row" id="rise-down-container-row">
+      <!--<div class="row" id="rise-down-container-row">
         <div class="col-5" id="rise-container">
           <div class="row" id="rise-down-row">
             <div class="col-3" id="rise-down-icons-container">
