cant figure out fahr conversion forecast

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
         <div class="col-12" id="humidity-container"></div>
       </div>
 
-      <div class="row" id="forecast-row"></div>
+      <div class="row" id="forecast-row">
+        <span id="forecast-temp"></span>
+      </div>
 
       <!--<div class="row" id="rise-down-container-row">
         <div class="col-5" id="rise-container">
